--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,5 +21,7 @@
 
 en:
   series: WGBH Series
+  series_short: Series
   exhibits: Scholar Exhibits
   collections: Special Collections
+  donate: Donate
