--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,7 +20,7 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  series: WGBH Series
+  series: GBH Series
   series_short: Series
   exhibits: Scholar Exhibits
   collections: Special Collections
